Renaming special outputs to derived metrics

--- a/tutorials/REV_Score.ipynb
+++ b/tutorials/REV_Score.ipynb
@@ -530,13 +530,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Special Outputs: Rational User and Maximum Value\n",
+    "## Derived Metrics: Rational User and Maximum Value\n",
     "\n",
     "When a user is unfamiliar with the performance of a particular forecasting system, it is often a good strategy to trust that the forecasts are probablistically reliable. In other words, when a forecast says there is a 80% chance of something happening, the event will happen 80% of the time, in the long run. This then becomes a special case where the user would use their particular cost-loss value as the forecast threshold to act upon. For example, with a cost-loss of 0.125, the user should act on the forecasts when it is 12.5% chance of the event or higher, and not act otherwise. \n",
     "\n",
     "However, if a user does have knowledge of the forecasting system performance, they can choose the optimal forecast threshold which gives the highest economic value. For example, if a forecast was not necessarily reliable, the user with a cost-loss of 0.125 might find that a forecast threshold of 30% gives them the maximum value.\n",
     "\n",
-    "Therefore, we have the option of \"special_outputs\": \n",
+    "Therefore, we have the option of \"derived_metrics\": \n",
     "\n",
     "1. **Rational user**: REV when users set their decision threshold equal to their cost-loss ratio (assumes forecast probabilities are reliable)\n",
     "2. **Maximum value**: The best REV achievable across all decision thresholds. Sometimes called the \"potential value\". \n"
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -583,22 +583,22 @@
     "matching_values = np.linspace(0, 1, 10, endpoint=False)\n",
     "\n",
     "# A requirement of \"rational_user\" is that the cost_loss_ratios and threshold values match\n",
-    "rev_special = relative_economic_value(\n",
+    "rev_derived = relative_economic_value(\n",
     "    fcst_probabilistic, \n",
     "    obs, \n",
     "    cost_loss_ratios=matching_values,\n",
     "    threshold=matching_values,\n",
-    "    special_outputs=['maximum', 'rational_user']\n",
+    "    derived_metrics=['maximum', 'rational_user']\n",
     ")\n",
     "\n",
     "print(\"REV for rational users (using probability directly):\")\n",
-    "print(rev_special['rational_user'])\n",
+    "print(rev_derived['rational_user'])\n",
     "print(\"\\nMaximum REV at each cost-loss ratio:\")\n",
-    "print(rev_special['maximum'])\n",
+    "print(rev_derived['maximum'])\n",
     "\n",
-    "plt.plot(matching_values, rev_special['rational_user'], \n",
+    "plt.plot(matching_values, rev_derived['rational_user'], \n",
     "        marker='s', linewidth=2, label='Rational User Value')\n",
-    "plt.plot(matching_values, rev_special['maximum'], \n",
+    "plt.plot(matching_values, rev_derived['maximum'], \n",
     "        marker='o', linewidth=2, label='Maximum (Potential) Value')\n",
     "plt.axhline(y=0, color='k', linestyle='--', alpha=0.3)\n",
     "plt.xlabel('Cost-Loss Ratio (α)', fontsize=12)\n",
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
     "    obs_freezing_0c,\n",
     "    cost_loss_ratios=matching_values,\n",
     "    threshold=matching_values,\n",
-    "    special_outputs=['maximum']\n",
+    "    derived_metrics=['maximum']\n",
     ")\n",
     "\n",
     "# Plot\n",
