--- a/tutorials/REV_Score.ipynb
+++ b/tutorials/REV_Score.ipynb
@@ -116,18 +116,18 @@
     "\n",
     "## Limitations of REV\n",
     "\n",
-    "The Cost-Loss Decision Model collapses the decision into \"protect\" and \"don't protect\" when in reality many decision-makers have a more graduated approach (e.g., drive safe social media messaging, grit the most vulnerable roads, grit all the roads, mandate a stay-at-home order). Similarly, the cost of each event can depend on its intensity, such that a severe frost might have different effects than a marginal one, but the contingency table treats all events as equally severe. Further, there can be compounding disasters, such as when freezing conditions coincide with a power failure (which might have nothing to do with the weather). \n",
+    "The Cost-Loss Decision model collapses the decision into \"protect\" and \"don't protect\" when in reality many decision-makers have a more graduated approach (e.g., drive safe social media messaging, grit the most vulnerable roads, grit all the roads, mandate a stay-at-home order). Similarly, the cost of each event can depend on its intensity, such that a severe frost might have different effects than a marginal one, but the contingency table treats all events as equally severe. Further, there can be compounding disasters, such as when freezing conditions coincide with a power failure (which might have nothing to do with the weather). \n",
     "\n",
-    "The Model assumes that the in-sample frequency of the event is the same as the climatological chance. This might be true in a stable climate and over a large enough collection of forecasts. It is possible to have the decision-maker assume something different about the climatology, but that is not implemented here. \n",
+    "The model assumes that the in-sample frequency of the event is the same as the climatological chance. This might be true in a stable climate and over a large enough collection of forecasts. It is possible to have the decision-maker assume something different about the climatology, but that is not implemented here. \n",
     "\n",
-    "The Model also assumes a completely rational decision maker, when in practice users exhibit loss aversion (misses are worse than false alarms), availability bias (recent events are more memorable), and there is organisational inertia. In some cases, such as water management on international rivers, fixed legal frameworks do not allow the use of forecasts, despite their seemingly obvious benefit. \n",
+    "The model also assumes a completely rational decision maker, when in practice users exhibit loss aversion, availability bias (recent events are more memorable), and there is organisational inertia. \n",
     "\n",
     "Most seriously, cost-loss information for real world examples is nearly non-existent. In many cases, the information is commercially or politically sensitive. It is also difficult to fully quantify impacts (e.g., When salt is applied to roads, what is the environmental impact of the runoff? What is the corrosion to vehicles and roads? What are the costs of maintaining gritting vehicles? What are the costs of monitoring the forecasts and developing gritting protocols?)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -232,14 +232,21 @@
     "\n",
     "alpha = cost / loss  # Cost-loss ratio\n",
     "\n",
-    "obar = (4 + 29)/ 77 # Observed climatological frequency of frost (over the winter days considered)\n",
+    "days_misses = 4 # Frost observed, no frost forecast\n",
+    "days_hits = 29 # Frost observed, frost forecast\n",
+    "days_false_alarm = 6 # No frost observed, frost forecast \n",
+    "days_correct_negative = 38 # No frost observed, no frost forecast \n",
+    "\n",
+    "days_total = days_misses + days_hits + days_false_alarm + days_correct_negative\n",
+    "\n",
+    "obar = (days_misses + days_hits)/ days_total # Observed climatological frequency of frost (over the winter days considered)\n",
     "\n",
     "print(f\"Cost-loss ratio (alpha) = {alpha:.3f}\")\n",
     "print(f\"Climatological event frequency = {100*obar:.1f}%\")\n",
     "\n",
-    "value_perfect = cost * obar * 77  \n",
-    "value_always_acting = cost * 77 \n",
-    "value_never_acting = loss * obar * 77 \n",
+    "value_perfect = cost * obar * days_total  \n",
+    "value_always_acting = cost * days_total \n",
+    "value_never_acting = loss * obar * days_total \n",
     "\n",
     "print(f\"Loss of never gritting = £{value_never_acting:,.0f}\")\n",
     "print(f\"Cost of gritting the roads every night = £{value_always_acting:,.0f}\")\n",
@@ -247,9 +254,9 @@
     "\n",
     "print(f\"Costs and losses with perfect foreknowledge = £{value_perfect:,.0f}\")\n",
     "\n",
-    "cost_of_false_alarms = 6 * cost\n",
-    "cost_of_hits = 29 * cost \n",
-    "cost_of_misses = 4 * loss\n",
+    "cost_of_false_alarms = days_false_alarm * cost\n",
+    "cost_of_hits = days_hits * cost \n",
+    "cost_of_misses = days_misses * loss\n",
     "cost_of_non_events = 0\n",
     "\n",
     "total_forecast_cost = cost_of_false_alarms + cost_of_hits + cost_of_misses + cost_of_non_events\n",
@@ -270,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -287,17 +294,17 @@
    ],
    "source": [
     "fcst_binary = xr.DataArray(\n",
-    "    [1] * 29 + [0] *  4 + # frost observed \n",
-    "    [1] *  6 + [0] * 38,  # no frost observed\n",
+    "    [1] * days_hits + [0] *  days_misses + # frost observed \n",
+    "    [1] * days_false_alarm + [0] * days_correct_negative,  # no frost observed\n",
     "    dims=[\"day\"],\n",
-    "    coords={\"day\": np.arange(77)}\n",
+    "    coords={\"day\": np.arange(days_total)}\n",
     ")\n",
     "\n",
     "obs = xr.DataArray(\n",
-    "    [1] * 29 + [1] *  4 + # frost observed \n",
-    "    [0] *  6 + [0] * 38,  # no frost observed\n",
+    "    [1] * days_hits + [1] * days_misses + # frost observed \n",
+    "    [0] * days_false_alarm + [0] * days_correct_negative,  # no frost observed\n",
     "    dims=[\"day\"],\n",
-    "    coords={\"day\": np.arange(77)}\n",
+    "    coords={\"day\": np.arange(days_total)}\n",
     ")\n",
     "\n",
     "rev_from_scores = relative_economic_value(fcst_binary, obs, cost_loss_ratios=alpha)\n",
@@ -319,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -339,15 +346,16 @@
     "    [0.95] * 8 + [0.9] * 6 + [0.75] * 6 + [0.5] * 5 + [0.25] * 4 + [0.1] *  3 + [0.05] *  1 + # frost happened\n",
     "    [0.95] * 0 + [0.9] * 0 + [0.75] * 1 + [0.5] * 2 + [0.25] * 3 + [0.1] * 10 + [0.05] * 28,  # no frost happened\n",
     "    dims=[\"day\"],\n",
-    "    coords={\"day\": np.arange(77)}\n",
+    "    coords={\"day\": np.arange(days_total)}\n",
     ")\n",
     "\n",
     "obs = xr.DataArray(\n",
-    "    [1] * 29 + [1] *  4 + # frost happened\n",
-    "    [0] *  6 + [0] * 38,  # no frost happened\n",
+    "    [1] * days_hits + [1] * days_misses + # frost observed \n",
+    "    [0] * days_false_alarm + [0] * days_correct_negative,  # no frost observed\n",
     "    dims=[\"day\"],\n",
-    "    coords={\"day\": np.arange(77)}\n",
+    "    coords={\"day\": np.arange(days_total)}\n",
     ")\n",
+    "\n",
     "\n",
     "thresholds = [0, 0.05, 0.1, 0.125, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.95, 1.0]\n",
     "\n",
@@ -391,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
