Changes to tests and code per nick's review

--- a/tutorials/REV_Score.ipynb
+++ b/tutorials/REV_Score.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
     "\\frac{£1,540,000 - £5,280,000}{£1,540,000 - £660,000} = -4.25\n",
     "$$\n",
     "\n",
-    "In this particular case, the highest REV happens at forecast threshold = 10%. Therefore, the optimal strategy for this user is to only grit the roads when the forecast is for >10% chance of frost. This may seem cautious but this is due to the low cost of protecting relative to the high cost of a missed event. "
+    "In this particular case, the highest REV happens at forecast threshold = 10%. Therefore, the optimal strategy for this user is to only grit the roads when the forecast is for >10% chance of frost. This may seem cautious but this is due to the low cost of protecting relative to the high cost of a missed event. Furthermore, the optimal threshold (10%) is different from the cost-loss ratio (0.125) because the forecasts are not perfectly calibrated. "
    ]
   },
   {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For users with a cost-loss of around 0.4-0.6, the forecasts are highly valuable. However, when the cost-loss is very low (left side of the graph), just a few missed events can mean catastrophic losses. On the right side, the cost of protection is so high that any false alarms would mean too high levels of waste. "
+    "For users with a cost-loss of around 0.4-0.6, the forecasts are highly valuable. However, when the cost-loss is very low (left side of the graph), just a few missed events can mean catastrophic losses. On the right side, the cost of protection is so high that any false alarms would mean too high levels of waste. Therefore, users with very low/high cost-loss ratios should not rely on the forecasts but instead the rational behavior is to always/never protect (respectively). "
    ]
   },
   {
@@ -454,13 +454,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "REV versus latitude (unweighted)):\n",
+      "  30°: 0.2500\n",
+      "  45°: 0.5000\n",
+      "  60°: 0.7500\n",
+      "\n",
       "Unweighted REV: 0.500\n",
       "\n",
       "Latitude weights (proportional to surface area):\n",
@@ -501,6 +506,13 @@
     ")\n",
     "\n",
     "# First, compute REV without weights (simple average)\n",
+    "rev_unweighted_by_lat = relative_economic_value(\n",
+    "    fcst_spatial,\n",
+    "    obs_spatial,\n",
+    "    cost_loss_ratios=[0.2],\n",
+    "    preserve_dims='lat'\n",
+    ")\n",
+    "\n",
     "rev_unweighted = relative_economic_value(\n",
     "    fcst_spatial,\n",
     "    obs_spatial,\n",
@@ -508,7 +520,11 @@
     "    reduce_dims='all'\n",
     ")\n",
     "\n",
-    "print(f\"Unweighted REV: {rev_unweighted.values[0]:.3f}\")\n",
+    "print(\"REV versus latitude (unweighted)):\")\n",
+    "for lat, rev_value in zip(lats, rev_unweighted_by_lat.values):\n",
+    "    print(f\"  {lat}°: {rev_value[0]:.4f}\")\n",
+    "\n",
+    "print(f\"\\nUnweighted REV: {rev_unweighted.values[0]:.3f}\")\n",
     "\n",
     "# Now apply cosine latitude weighting\n",
     "# cos(latitude) gives each grid cell weight proportional to its actual surface area\n",
@@ -552,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -560,6 +576,7 @@
      "output_type": "stream",
      "text": [
       "REV for rational users (using probability directly):\n",
+      "\n",
       "<xarray.DataArray 'rational_user' (cost_loss_ratio: 10)> Size: 80B\n",
       "array([       nan, 0.43181818, 0.5       , 0.50757576, 0.65909091,\n",
       "       0.66666667, 0.56060606, 0.53535354, 0.42424242, 0.42424242])\n",
@@ -568,6 +585,7 @@
       "    threshold        (cost_loss_ratio) float64 80B 0.0 0.1 0.2 ... 0.7 0.8 0.9\n",
       "\n",
       "Maximum REV at each cost-loss ratio:\n",
+      "\n",
       "<xarray.DataArray 'maximum' (cost_loss_ratio: 10)> Size: 80B\n",
       "array([       nan, 0.43181818, 0.54545455, 0.65151515, 0.72727273,\n",
       "       0.6969697 , 0.62121212, 0.54545455, 0.48484848, 0.42424242])\n",
@@ -599,9 +617,9 @@
     "    derived_metrics=['maximum', 'rational_user']\n",
     ")\n",
     "\n",
-    "print(\"REV for rational users (using probability directly):\")\n",
+    "print(\"REV for rational users (using probability directly):\\n\")\n",
     "print(rev_derived['rational_user'])\n",
-    "print(\"\\nMaximum REV at each cost-loss ratio:\")\n",
+    "print(\"\\nMaximum REV at each cost-loss ratio:\\n\")\n",
     "print(rev_derived['maximum'])\n",
     "\n",
     "plt.plot(matching_values, rev_derived['rational_user'], \n",
@@ -632,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1050,7 @@
     "\n",
     "Explore the effects of ensemble size on economic value. Create a large ensemble (e.g. 500 members) and the progressively thin (sub-sample) the ensemble (100, 50, 25, 10, 5 members) and see how value changes, if at all. \n",
     "\n",
-    "Create forecast datasets with seemingly high accuracy and low accuracy, as measured by the Critical Success Index (CSI). Can you generate scenarios where one forecast has a higher CSI but lower REV than the other? Do this by plotting CSI versus REV for a variety of cost-loss ratios. What does this tell you about the difference between accuracy and value? \n"
+    "Create two forecast systems: one that is well-calibrated (probabilistically reliable) but conservative, and another that is poorly calibrated but aggressive in its warnings. Compare their Brier Scores and REV across different cost-loss ratios. Can you find scenarios where the \"worse\" forecast (by Brier Score) delivers higher economic value? What does this reveal about optimizing for accuracy versus optimizing for decision-making?"
    ]
   },
   {
