Preparing to allow both forecasts and obs as datasets

--- a/tutorials/REV_Score.ipynb
+++ b/tutorials/REV_Score.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -520,6 +520,8 @@
     "    reduce_dims='all'\n",
     ")\n",
     "\n",
+    "lats = [30, 45, 60]\n",
+    "\n",
     "print(\"REV versus latitude (unweighted)):\")\n",
     "for lat, rev_value in zip(lats, rev_unweighted_by_lat.values):\n",
     "    print(f\"  {lat}°: {rev_value[0]:.4f}\")\n",
@@ -528,7 +530,7 @@
     "\n",
     "# Now apply cosine latitude weighting\n",
     "# cos(latitude) gives each grid cell weight proportional to its actual surface area\n",
-    "lats = [30, 45, 60]\n",
+    "\n",
     "weights = xr.DataArray(\n",
     "    np.cos(np.radians(lats)), \n",
     "    dims=[\"lat\"], \n",
@@ -568,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -937,6 +939,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Working with Datasets\n",
+    "\n",
+    "REV can work with Xarray datasets. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<xarray.Dataset> Size: 24B\n",
+      "Dimensions:          (cost_loss_ratio: 1)\n",
+      "Coordinates:\n",
+      "  * cost_loss_ratio  (cost_loss_ratio) float64 8B 0.5\n",
+      "Data variables:\n",
+      "    ecmwf            (cost_loss_ratio) float64 8B 0.0\n",
+      "    access           (cost_loss_ratio) float64 8B -0.5\n",
+      "<xarray.Dataset> Size: 56B\n",
+      "Dimensions:          (threshold: 1, cost_loss_ratio: 2)\n",
+      "Coordinates:\n",
+      "  * threshold        (threshold) float64 8B 0.5\n",
+      "  * cost_loss_ratio  (cost_loss_ratio) float64 16B 0.3 0.7\n",
+      "Data variables:\n",
+      "    station_data     (threshold, cost_loss_ratio) float64 16B 1.0 1.0\n",
+      "    radar_data       (threshold, cost_loss_ratio) float64 16B 0.5714 -1.333\n"
+     ]
+    }
+   ],
+   "source": [
+    "fcst_ds = xr.Dataset(\n",
+    "    {\"ecmwf\": xr.DataArray([0, 1, 1, 0], dims=[\"time\"]), \"access\": xr.DataArray([1, 0, 1, 1], dims=[\"time\"])}\n",
+    "    )\n",
+    "\n",
+    "obs = xr.DataArray([0, 1, 0, 1], dims=[\"time\"])\n",
+    "\n",
+    "actual = relative_economic_value(fcst_ds, obs, [0.5])\n",
+    "\n",
+    "expected = xr.Dataset(\n",
+    "            data_vars={\"ecmwf\": ([\"cost_loss_ratio\"], [0.0]), \"access\": ([\"cost_loss_ratio\"], [-0.5])},\n",
+    "            coords={\"cost_loss_ratio\": [0.5]},\n",
+    ")\n",
+    "print(actual)\n",
+    "\n",
+    "xr.testing.assert_allclose(actual, expected)\n",
+    "\n",
+    "fcst = xr.DataArray([0.2, 0.8, 0.6, 0.4], dims=[\"time\"])\n",
+    "obs_ds = xr.Dataset(\n",
+    "        {\n",
+    "            \"station_data\": xr.DataArray([0, 1, 1, 0], dims=[\"time\"]),\n",
+    "            \"radar_data\": xr.DataArray([0, 0, 1, 0], dims=[\"time\"]),\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "actual = relative_economic_value(fcst, obs_ds, [0.3, 0.7], threshold=[0.5])\n",
+    "expected = xr.Dataset(\n",
+    "            data_vars={\n",
+    "                \"station_data\": ([\"threshold\", \"cost_loss_ratio\"], [[1.0, 1.0]]),\n",
+    "                \"radar_data\": ([\"threshold\", \"cost_loss_ratio\"], [[0.571429, -1.33333]]),\n",
+    "            },\n",
+    "            coords={\"threshold\": [0.5], \"cost_loss_ratio\": [0.3, 0.7]},\n",
+    "        )\n",
+    "\n",
+    "print(actual)\n",
+    "xr.testing.assert_allclose(actual, expected)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Custom Dimension Names and Extracting Particular Thresholds\n",
     "\n",
     "You can customize the output dimension names to avoid conflicts. You can also output a subset of your selected thresholds. "
@@ -944,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1004,38 +1080,105 @@
    "source": [
     "## Working with Dask\n",
     "\n",
-    "For large datasets, you will want lazy evaluation—computing only when necessary rather than loading everything into memory. Dask provides this through chunked arrays.\n",
+    "For large datasets, you will want lazy evaluation- computing only when necessary rather than loading everything into memory. Dask provides this through chunked arrays.\n",
     "\n",
-    "By default, the REV function validates inputs (checking dimensions match, data types are correct, etc.). With Dask arrays, these checks force premature computation, defeating the purpose of lazy evaluation. Setting check_args=False bypasses validation and preserves the lazy computation graph.\n",
+    "### Validation Trade-offs\n",
     "\n",
-    "Dask scales efficiently to datasets too large for memory. The function processes chunks independently, and Dask handles the orchestration behind the scenes.\n"
+    "The REV function performs two types of validation:\n",
+    "\n",
+    "1. **Structural checks** (always lazy): Validates dimensions, threshold configurations, and cost-loss ratio ordering. These checks examine metadata only and do not trigger computation.\n",
+    "\n",
+    "2. **Value checks** (forces computation): Validates actual data values- ensuring forecasts are in [0,1], observations are binary, etc. These checks require reading only the min/max statistics of the data.\n",
+    "\n",
+    "By default, `check_args=True` performs both types of validation. This forces a minor computation of min/max statistics across your entire dataset. While this briefly interrupts lazy evaluation, it is highly efficient and catches data quality issues early.\n",
+    "\n",
+    "For Dask workflows, you have two options:\n",
+    "\n",
+    "- **Validated**: Use `check_args=True` (default). Accepts the minimal computation cost for min/max checks, ensuring data quality before proceeding with expensive calculations.\n",
+    "- **Fast**: Use `check_args=False`. Skips all validation to preserve fully lazy evaluation. Only use this when you are confident your inputs are valid.\n",
+    "\n",
+    "Note that even with `check_args=True`, the actual REV calculation remains lazy- only the validation checks force computation. The final `.compute()` call triggers the full calculation.\n",
+    "\n",
+    "### Dask Scaling\n",
+    "\n",
+    "Dask processes chunks independently, handling orchestration automatically. This enables efficient computation on datasets larger than memory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fast path: No computation yet\n",
+      "Validated path: Min/max computed, but full result still lazy\n",
+      "Results match!\n",
+      "\n",
+      "=== Testing validation with invalid binary forecasts ===\n",
+      "check_args=False: Created lazy result with invalid data (value 2 in binary forecast)\n",
+      "check_args=False: Computed result with bad data: [0.5]\n",
+      "  (No error raised, but result is mathematically wrong)\n",
+      "\n",
+      "check_args=True: Validation caught error immediately:\n",
+      "  When threshold is None, fcst must contain only 0, 1, or NaN values. For probabilistic forecasts, provide threshold parameter.\n"
+     ]
+    }
+   ],
    "source": [
     "import dask.array as da\n",
     "\n",
-    "fcst_np = np.array([1, 1, 0, 0, 1]) # perfect forecasts \n",
-    "obs_np = np.array([1, 1, 0, 0, 1])\n",
+    "# Create valid data for comparison\n",
+    "np.random.seed(42)\n",
+    "fcst_np = np.random.binomial(1, 0.6, size=10000)\n",
+    "obs_np = np.random.binomial(1, 0.5, size=10000)\n",
     "\n",
-    "fcst = xr.DataArray(da.from_array(fcst_np, chunks=2), dims=[\"time\"])\n",
-    "obs = xr.DataArray(da.from_array(obs_np, chunks=2), dims=[\"time\"])\n",
+    "fcst = xr.DataArray(da.from_array(fcst_np, chunks=1000), dims=[\"time\"])\n",
+    "obs = xr.DataArray(da.from_array(obs_np, chunks=1000), dims=[\"time\"])\n",
     "\n",
-    "result = relative_economic_value(fcst, obs, [0.5], check_args=False)\n",
+    "# With check_args=False: Fully lazy - no computation yet\n",
+    "result_fast = relative_economic_value(fcst, obs, [0.3, 0.5, 0.7], check_args=False)\n",
+    "assert isinstance(result_fast.data, da.Array)\n",
+    "print(\"Fast path: No computation yet\")\n",
     "\n",
-    "# Computation has not yet happened, so we can verify that the result is still lazy\n",
+    "# With check_args=True: Min/max validation forces small computation\n",
+    "result_validated = relative_economic_value(fcst, obs, [0.3, 0.5, 0.7], check_args=True)\n",
+    "assert isinstance(result_validated.data, da.Array)\n",
+    "print(\"Validated path: Min/max computed, but full result still lazy\")\n",
+    "\n",
+    "# Both produce identical results when computed\n",
+    "computed_fast = result_fast.compute()\n",
+    "computed_validated = result_validated.compute()\n",
+    "xr.testing.assert_allclose(computed_fast, computed_validated)\n",
+    "print(\"Results match!\\n\")\n",
+    "\n",
+    "# Demonstrate validation catching errors with BINARY forecasts (no threshold)\n",
+    "print(\"=== Testing validation with invalid binary forecasts ===\")\n",
+    "fcst_bad = xr.DataArray(da.from_array(np.array([0, 1, 2, 0]), chunks=2), dims=[\"time\"])\n",
+    "obs_good = xr.DataArray(da.from_array(np.array([0, 1, 0, 1]), chunks=2), dims=[\"time\"])\n",
+    "\n",
+    "# With check_args=False: Proceeds with invalid data\n",
+    "result = relative_economic_value(fcst_bad, obs_good, [0.5], check_args=False)\n",
     "assert isinstance(result.data, da.Array)\n",
+    "print(\"check_args=False: Created lazy result with invalid data (value 2 in binary forecast)\")\n",
     "\n",
-    "# Calling compute triggers actual calculation\n",
-    "computed = result.compute()\n",
+    "# Compute it - it won't necessarily fail, but will give wrong results\n",
+    "try:\n",
+    "    computed = result.compute()\n",
+    "    print(f\"check_args=False: Computed result with bad data: {computed.values}\")\n",
+    "    print(\"  (No error raised, but result is mathematically wrong)\\n\")\n",
+    "except Exception as e:\n",
+    "    print(f\"check_args=False: Error during compute(): {type(e).__name__}: {e}\\n\")\n",
     "\n",
-    "# Which allows us to compare it to the expected result\n",
-    "expected = xr.DataArray([1.0], dims=[\"cost_loss_ratio\"], coords={\"cost_loss_ratio\": [0.5]})\n",
-    "xr.testing.assert_allclose(computed, expected)"
+    "# With check_args=True: Catches the error immediately\n",
+    "try:\n",
+    "    relative_economic_value(fcst_bad, obs_good, [0.5], check_args=True)\n",
+    "except ValueError as e:\n",
+    "    print(f\"check_args=True: Validation caught error immediately:\\n  {e}\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
