Added in datasets for both obs and forecasts

--- a/tutorials/REV_Score.ipynb
+++ b/tutorials/REV_Score.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -967,27 +967,33 @@
       "  * cost_loss_ratio  (cost_loss_ratio) float64 16B 0.3 0.7\n",
       "Data variables:\n",
       "    station_data     (threshold, cost_loss_ratio) float64 16B 1.0 1.0\n",
-      "    radar_data       (threshold, cost_loss_ratio) float64 16B 0.5714 -1.333\n"
+      "    radar_data       (threshold, cost_loss_ratio) float64 16B 0.5714 -1.333\n",
+      "<xarray.Dataset> Size: 88B\n",
+      "Dimensions:                   (threshold: 1, cost_loss_ratio: 2)\n",
+      "Coordinates:\n",
+      "  * threshold                 (threshold) float64 8B 0.5\n",
+      "  * cost_loss_ratio           (cost_loss_ratio) float64 16B 0.3 0.7\n",
+      "Data variables:\n",
+      "    access__vs__radar_data    (threshold, cost_loss_ratio) float64 16B 0.1429...\n",
+      "    access__vs__station_data  (threshold, cost_loss_ratio) float64 16B -1.167...\n",
+      "    ecmwf__vs__radar_data     (threshold, cost_loss_ratio) float64 16B 0.5714...\n",
+      "    ecmwf__vs__station_data   (threshold, cost_loss_ratio) float64 16B 1.0 1.0\n"
      ]
     }
    ],
    "source": [
+    "# Forecasts can be datasets \n",
     "fcst_ds = xr.Dataset(\n",
     "    {\"ecmwf\": xr.DataArray([0, 1, 1, 0], dims=[\"time\"]), \"access\": xr.DataArray([1, 0, 1, 1], dims=[\"time\"])}\n",
     "    )\n",
     "\n",
     "obs = xr.DataArray([0, 1, 0, 1], dims=[\"time\"])\n",
     "\n",
-    "actual = relative_economic_value(fcst_ds, obs, [0.5])\n",
+    "result = relative_economic_value(fcst_ds, obs, [0.5])\n",
     "\n",
-    "expected = xr.Dataset(\n",
-    "            data_vars={\"ecmwf\": ([\"cost_loss_ratio\"], [0.0]), \"access\": ([\"cost_loss_ratio\"], [-0.5])},\n",
-    "            coords={\"cost_loss_ratio\": [0.5]},\n",
-    ")\n",
-    "print(actual)\n",
+    "print(result)\n",
     "\n",
-    "xr.testing.assert_allclose(actual, expected)\n",
-    "\n",
+    "# Observations can also be datasets\n",
     "fcst = xr.DataArray([0.2, 0.8, 0.6, 0.4], dims=[\"time\"])\n",
     "obs_ds = xr.Dataset(\n",
     "        {\n",
@@ -996,17 +1002,15 @@
     "        }\n",
     "    )\n",
     "\n",
-    "actual = relative_economic_value(fcst, obs_ds, [0.3, 0.7], threshold=[0.5])\n",
-    "expected = xr.Dataset(\n",
-    "            data_vars={\n",
-    "                \"station_data\": ([\"threshold\", \"cost_loss_ratio\"], [[1.0, 1.0]]),\n",
-    "                \"radar_data\": ([\"threshold\", \"cost_loss_ratio\"], [[0.571429, -1.33333]]),\n",
-    "            },\n",
-    "            coords={\"threshold\": [0.5], \"cost_loss_ratio\": [0.3, 0.7]},\n",
-    "        )\n",
+    "result = relative_economic_value(fcst, obs_ds, [0.3, 0.7], threshold=[0.5])\n",
     "\n",
-    "print(actual)\n",
-    "xr.testing.assert_allclose(actual, expected)"
+    "print(result)\n",
+    "\n",
+    "# It is also possible to make both observations and forecasts datasets although the \n",
+    "# output names are changed. \n",
+    "\n",
+    "result = relative_economic_value(fcst_ds, obs_ds, [0.3, 0.7], threshold=[0.5])\n",
+    "print(result)"
    ]
   },
   {
@@ -1020,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
